# Mangetamain

./: .gitignore  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
src/: config.json
src/webapp_mangetamain/: __about__.py  ingredient_data_process.py  ingredients_analyzer.py  interface.py  load_config.py  local_food.py  nutriscore_analyzer.py  recipe_complexity.py  tag_analyzer.py
src/webapp_mangetamain/utils/: filter_data.py  ingredient_data_process.py
tests/: __init__.py  conftest.py  test_nutriscore_analyzer.py  test_recipe_complexity.py  test_tags_analyzer.py
