[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webapp-mangetamain"
version = "1.0.0"
description = "Application Streamlit pour l'analyse de recettes"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = []
authors = [
  { name = "Ambroise012", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "streamlit==1.50.0",
  "pandas==2.3.3",
  "numpy==2.2.6",
  "matplotlib==3.10.6",
  "seaborn==0.13.2",
  "requests==2.32.5",
  "pytest==8.4.2",
  "pytest-cov",
  "ruff",
  "coverage",
]

[project.scripts]
webapp = "webapp_mangetamain.interface:main"

[project.urls]
Documentation = "https://github.com/Fadel0202/Mangetamain#readme"
Issues = "https://github.com/Fadel0202/Mangetamain/issues"
Source = "https://github.com/Fadel0202/Mangetamain"

[tool.hatch.version]
path = "src/webapp_mangetamain/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "ruff",
  "coverage",
]

[tool.hatch.envs.default.scripts]
lint = "ruff check ."
lint-fix = "ruff check . --fix"
test = "pytest --maxfail=1 --disable-warnings -q"
test-cov = "pytest --cov=src --cov-report=term-missing --cov-report=html"
webapp = "streamlit run src/webapp_mangetamain/interface.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/webapp_mangetamain tests}"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff]
line-length = 88
exclude = ["venv", "build", "__pycache__", "migrations"]

[tool.coverage.run]
source_pkgs = ["webapp_mangetamain", "tests"]
branch = true
parallel = true
omit = [
  "src/webapp_mangetamain/__about__.py",
]

[tool.coverage.paths]
webapp_mangetamain = ["src/webapp_mangetamain", "*/webapp-mangetamain/src/webapp_mangetamain"]
tests = ["tests", "*/webapp-mangetamain/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]